--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -20,5 +20,5 @@ jobs:
           yarn instal --network-concurrency 1
 
       - name: Running tests
-        run: yarn tests
-        
+        run: yarn test
+
