--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -5,7 +5,7 @@ on:
       - main
 jobs:
   run-tests:
-    runs-on: ubunto-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3.3.0
@@ -13,7 +13,7 @@ jobs:
         uses: actions/setup-node@v3.6.0
         with: 
           node-version: 16.13.x
-          cach: yarn
+          cache: yarn
       - name: Install dependencies
         run: |  
           yarn cache clean 
